# rsomics-bam-quickcheck

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: bad_magic.bam  no_eof.bam  ok.bam  ok.sam
